added "only-known-parents" option to the scoped tree also

--- a/bcs/drzewo/templates/drzewo/full_tree_generation.html
+++ b/bcs/drzewo/templates/drzewo/full_tree_generation.html
@@ -5,10 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-  <form method="get" action="{% url 'drzewo:full-tree-generation' %}">
+  <form method="get">
     {{ form.as_p }}
     <button type="submit">Generate</button>
   </form>
-
 </body>
 </html>
