--- a/bcs/drzewo/templates/drzewo/scoped_tree_generation.html
+++ b/bcs/drzewo/templates/drzewo/scoped_tree_generation.html
@@ -7,7 +7,7 @@
 <body>
   <form method="get">
     {{ form.as_p }}
-    <button type="submit">Generate Scoped Tree</button>
+    <button type="submit">Generate</button>
   </form>
 </body>
 </html>
