--- a/bcs/drzewo/templates/drzewo/full_tree_generation.html
+++ b/bcs/drzewo/templates/drzewo/full_tree_generation.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Generate Full Tree</title>
 </head>
 <body>
   <form method="get">
