feat(wyszukiwarka): `SearchableModel.snippet()` function bolds found query text

--- a/bcs/wyszukiwarka/templates/wyszukiwarka/search_results.html
+++ b/bcs/wyszukiwarka/templates/wyszukiwarka/search_results.html
@@ -13,8 +13,8 @@
     <ul>
       {% for result in results %}
         <li>
-          <strong><a href="{{ result.admin_url }}">{{ result.title }}</a></strong><br>
-          {{ result.snippet }}
+          <a href="{{ result.admin_url }}">{{ result.title }}</a><br>
+          {{ result.snippet|safe }}
         </li>
       {% endfor %}
     </ul>
