feat(wyszukiwarka): enable collapsing of app's categories in `search` view

--- a/bcs/wyszukiwarka/static/wyszukiwarka/css/search.css
+++ b/bcs/wyszukiwarka/static/wyszukiwarka/css/search.css
@@ -45,3 +45,15 @@
   padding: 0.4rem 0;
 }
 
+.app-name {
+    cursor: pointer;
+    user-select: none;
+    margin-top: 1.5rem;
+}
+
+.toggle-indicator {
+    font-weight: normal;
+    margin-left: 0.5rem;
+    color: #888;
+}
+
