--- a/bcs/wyszukiwarka/templates/wyszukiwarka/search_results.html
+++ b/bcs/wyszukiwarka/templates/wyszukiwarka/search_results.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Search</title>
-    <link rel="stylesheet" href="{% static 'wyszukiwarka/search.css' %}">
+    <link rel="stylesheet" href="{% static 'wyszukiwarka/css/search.css' %}">
 </head>
 <body>
 
@@ -22,25 +22,32 @@
     <h2>Results for "{{ query }}"</h2>
     {% if results_by_app %}
         {% for app_name, categories in results_by_app.items %}
-            <h2 class="app-name">{{ app_name|capfirst }}</h2>
+  <div class="app-section">
+    <h2 class="app-name" onclick="toggleSection(this)">
+      {{ app_name|capfirst }}
+      <span class="toggle-indicator">[+]</span>
+    </h2>
+    <div class="app-results" style="display: none;">
+      {% for category_name, items in categories.items %}
+        <h3 class="result-category">{{ category_name|title }}</h3>
+        <ul class="result-list">
+          {% for result in items %}
+            <li>
+              <a href="{{ result.admin_url }}"><strong>{{ result.title }}</strong></a><br>
+              {{ result.snippet|safe }}
+            </li>
+          {% endfor %}
+        </ul>
+      {% endfor %}
+    </div>
+  </div>
+{% endfor %}
 
-            {% for category_name, items in categories.items %}
-                <h3 class="result-category">{{ category_name }}</h3>
-                <ul class="result-list">
-                    {% for result in items %}
-                        <li class="search-item">
-                            <a href="{{ result.admin_url }}"><strong>{{ result.title }}</strong></a><br>
-                            <span class="snippet">{{ result.snippet|safe }}</span>
-                        </li>
-                    {% endfor %}
-                </ul>
-            {% endfor %}
-
-        {% endfor %}
     {% else %}
         <p>No results found.</p>
     {% endif %}
 {% endif %}
 
+<script src="{% static 'wyszukiwarka/js/search.js' %}"></script>
 </body>
 </html>
