fix(wyszukiwarka): small tweaks to the `search` view frontend
Remove title filter on result category and change its color to more distinct from app label's

--- a/bcs/wyszukiwarka/static/wyszukiwarka/css/search.css
+++ b/bcs/wyszukiwarka/static/wyszukiwarka/css/search.css
@@ -30,7 +30,7 @@
   font-size: 1.3rem;
   margin-top: 1.5rem;
   font-weight: bold;
-  color: #2c3e50;
+  color: #82c486;
   border-bottom: 2px solid #ddd;
   padding-bottom: 0.2rem;
 }
