--- a/bcs/wyszukiwarka/templates/wyszukiwarka/search_results.html
+++ b/bcs/wyszukiwarka/templates/wyszukiwarka/search_results.html
@@ -29,7 +29,7 @@
     </h2>
     <div class="app-results" style="display: none;">
       {% for category_name, items in categories.items %}
-        <h3 class="result-category">{{ category_name|title }}</h3>
+        <h3 class="result-category">{{ category_name }}</h3>
         <ul class="result-list">
           {% for result in items %}
             <li>
