style(spiewnik): use BEM naming convention in `spis_tresci` view stylesheet

--- a/bcs/spiewnik/templates/spiewnik/spis_tresci.html
+++ b/bcs/spiewnik/templates/spiewnik/spis_tresci.html
@@ -8,30 +8,38 @@
     <link rel="stylesheet" href="{% static 'spiewnik/css/spis_tresci.css' %}">
 </head>
 <body>
+    <div class="toc">
+        <h1 class="toc__title">Spis treści</h1>
 
-<h1>Spis treści</h1>
-
-{% for category, songs in songs_by_category %}
-    {% if songs %}
-        <h2>{{ category.nazwa }}</h2>
-        <ul>
-            {% for song in songs %}
-                <li><a href="{% url 'spiewnik:piosenka' song.pk %}">{{ song.tytul }}</a></li>
-            {% endfor %}
-        </ul>
-    {% endif %}
-{% endfor %}
-
-{% if uncategorized %}
-<div class="uncategorized">
-    <h2>Bez kategorii</h2>
-    <ul>
-        {% for song in uncategorized %}
-            <li><a href="{% url 'piosenka' song.pk %}">{{ song.tytul }}</a></li>
+        {% for category, songs in songs_by_category %}
+            {% if songs %}
+                <h2 class="toc__category-title">{{ category.nazwa }}</h2>
+                <ul class="toc__list">
+                    {% for song in songs %}
+                        <li class="toc__item">
+                            <a href="{% url 'spiewnik:piosenka' song.pk %}" class="toc__link">
+                                {{ song.tytul }}
+                            </a>
+                        </li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
         {% endfor %}
-    </ul>
-</div>
-{% endif %}
 
+        {% if uncategorized %}
+            <div class="toc__uncategorized">
+                <h2 class="toc__category-title">Bez kategorii</h2>
+                <ul class="toc__list">
+                    {% for song in uncategorized %}
+                        <li class="toc__item">
+                            <a href="{% url 'piosenka' song.pk %}" class="toc__link">
+                                {{ song.tytul }}
+                            </a>
+                        </li>
+                    {% endfor %}
+                </ul>
+            </div>
+        {% endif %}
+    </div>
 </body>
 </html>
