--- a/bcs/spiewnik/static/spiewnik/css/spis_tresci.css
+++ b/bcs/spiewnik/static/spiewnik/css/spis_tresci.css
@@ -7,36 +7,46 @@ body {
     padding: 20px;
 }
 
-h1 {
+/* Table of Contents wrapper */
+.toc {}
+
+/* Title */
+.toc__title {
     text-align: center;
     margin-bottom: 30px;
+    font-size: 2rem;
 }
 
-h2 {
+/* Category title */
+.toc__category-title {
     color: #2c3e50;
     border-bottom: 1px solid #ddd;
     padding-bottom: 5px;
     margin-top: 30px;
+    font-size: 1.2rem;
 }
 
-ul {
-    list-style-type: none;
+/* Song list styles */
+.toc__list {
+    list-style: none;
     padding-left: 0;
+    margin: 0;
 }
 
-li {
+.toc__item {
     margin: 4px 0;
 }
 
-a {
+.toc__link {
     text-decoration: none;
     color: #2980b9;
 }
 
-a:hover {
+.toc__link:hover {
     text-decoration: underline;
 }
 
-.uncategorized {
+/* Uncategorized block */
+.toc__uncategorized {
     margin-top: 40px;
 }
