fix(spiewnik): change page title in `spis_tresci` view

--- a/bcs/spiewnik/templates/spiewnik/spis_tresci.html
+++ b/bcs/spiewnik/templates/spiewnik/spis_tresci.html
@@ -4,7 +4,7 @@
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
-    <title>Spis treści - Śpiewnik</title>
+    <title>Śpiewnik - Spis treści</title>
     <link rel="stylesheet" href="{% static 'spiewnik/css/spis_tresci.css' %}">
 </head>
 <body>
