style: format frontend files with `prettier`

--- a/bcs/drzewo/templates/drzewo/scoped_tree_generation.html
+++ b/bcs/drzewo/templates/drzewo/scoped_tree_generation.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Generate Scoped Tree</title>
-    </head>
-    <body>
-        <form method="get">
-            {{ form.as_p }}
-            <button type="submit">Generate</button>
-        </form>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Generate Scoped Tree</title>
+  </head>
+  <body>
+    <form method="get">
+      {{ form.as_p }}
+      <button type="submit">Generate</button>
+    </form>
+  </body>
 </html>
